<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>gscam_h264</name>
    <version>0.1.0</version>
    <description>
        H.264 passthrough camera publisher for Jetson Orin.
        Captures V4L2 camera input, HW-encodes to H.264 via GStreamer,
        and publishes as sensor_msgs/CompressedImage.
    </description>

    <maintainer email="todo@todo.com">TODO</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>libgstreamer1.0-dev</depend>
    <depend>libgstreamer-plugins-base1.0-dev</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
